--- a/package.json
+++ b/package.json
@@ -1,25 +1,52 @@
 {
-  "name": "testgulp",
+  "name": "gulp-template-for-html-css-sass-js",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An automation template for HTML, CSS, Sass, and JavaScript.",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/code-warrior/gulp-template-for-html-css-sass-js.git"
+  },
+  "keywords": [
+    "gulp",
+    "automation",
+    "template",
+    "html",
+    "css",
+    "sass",
+    "javascript"
+  ],
+  "author": "Roy Vanegas",
   "license": "ISC",
+  "contributors": [
+    {
+      "name": "Roy Vanegas",
+      "email": "roy@thecodeeducators.com",
+      "url": "http://roy.vanegas.org"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/code-warrior/gulp-template-for-html-css-sass-js/issues"
+  },
+  "homepage": "https://github.com/code-warrior/gulp-template-for-html-css-sass-js#readme",
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.18.13",
-    "del": "^3.0.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.10.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-cache": "^0.4.6",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
-    "run-sequence": "^2.1.0"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-cache": "^0.4.1",
+    "gulp-csso": "^1.0.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-html": "^0.4.4",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1"
   }
 }
